--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "./node_modules/font-awesome/css/font-awesome.css",
               "src/assets/icomoon/style.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
